--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "will-you-be-my-valentine",
-  "homepage": "https://saurabhnemade.github.io/will-you-be-my-valentine",
+  "name": "for-my-talks-a-lot",
+  "homepage": "https://eancalapit.github.io/for-my-talks-a-lot",
   "private": true,
   "version": "0.0.1",
   "type": "module",
