Add predeploy and deploy scripts to package.json

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
-  }
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
+  },
+  "homepage": "https://eancalapit.github.io/for-my-talks-a-lot/"
 }
